@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.3.0
 ====================================
+- Improved &contexts param in Login snippet to work successfully with Revo 2.0.4 login processor
 - Added ChangePassword snippet for changing passwords in the front-end
 - Added Dutch translation
 
